[package]
authors     = ["Rhaki"]
description = "Terminal manager for displaying outputs/errors of processes launched from rust code."
edition     = "2024"
license     = "MIT"
name        = "log-terminal"
version     = "0.1.0"

[dependencies]
ansi-to-tui        = "7"
crossterm          = "0.29"
ratatui            = "0.29"
tracing            = "0.1"
tracing-subscriber = "0.3"
